# numerixpy

./: MANIFEST.in  README.md  pyproject.toml
docs/source/: conf.py
src/numerixpy/: __init__.py  differential.py  integral.py
src/numerixpy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/numerixpy/misc/: __init__.py  square.py  timing.py
